<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="optmenu_share_text">Share</string>
    <string name="optmenu_help_text">Help</string>
    <string name="optmenu_about_text">About</string>
    
    <string name="share_title">Send to</string>
    <string name="share_subject"><xliff:g>@string/app_name</xliff:g></string>
    
    <string name="pref_category1_title">App</string>
    <string name="pref_category2_title">Filter level</string>
    <string name="pref_category3_title">Ring volume</string>
    <string name="pref_category4_title">Active when in…</string>
    <string name="pref_category5_title">Misc.</string>
    <string name="pref_category6_title">Help</string>
    
    <string name="pref_enabled_title">Enable</string>
    
    <string name="pref_level_title"></string>
    <string name="pref_level_summary"></string>
    
    <string name="pref_level_slider_easy">Easier to reach</string>
    <string name="pref_level_slider_hard">Harder to reach</string>
    
    <string name="pref_volume_slider_low">Low</string>
    <string name="pref_volume_slider_high">High</string>
    
    <string name="pref_volume_title">Override</string>
    <string name="pref_volume_summary"></string>
    
    <string name="pref_volume_dialog_title">Volume</string>
    <string name="pref_volume_dialog_message">Set desired volume for calls that are allowed to ring audibly.</string>
    
    <string name="pref_volume_summary_text">Volume: <xliff:g>%1$d%%</xliff:g></string>
    <string name="pref_volume_default_summary_text">Volume: System default</string>
    
    <string name="pref_scope_title"></string>
    <string name="pref_scope_summary"></string>
    <string name="pref_scope_summary_text"><xliff:g>%1$s%%</xliff:g></string>
    <string name="pref_scope_dialog_title">@string/pref_category4_title</string>
    
    <string name="pref_contactsonly_title">Contacts only</string>
    <string name="pref_contactsonly_summary">Ignore calls from unknown or hidden numbers</string>
    
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_notification_summary">Notify after a call was allowed to ring audibly</string>
    
    <string name="pref_help_title">Help</string>
    
    <string name="level_title_text">Level <xliff:g>%1$d.%2$d</xliff:g></string>
    
    <plurals name="level_summary_text_descriptive">
	    <item quantity="one"  >Audibly ring an incoming call, if the caller has already:\n\n• Called once\n• Rang for <xliff:g>%2$d%%</xliff:g> of the time</item>
	    <item quantity="few"  >Audibly ring an incoming call, if the caller has already:\n\n• Called <xliff:g>%1$d</xliff:g> times\n• Rang for <xliff:g>%2$d%%</xliff:g> of the time</item>
	    <item quantity="other">Audibly ring an incoming call, if the caller has already:\n\n• Called <xliff:g>%1$d</xliff:g> times\n• Rang for <xliff:g>%2$d%%</xliff:g> of the time</item>
	</plurals>
    
    <string name="notification_title"><xliff:g>@string/app_name</xliff:g></string>
    <string name="notification_text">Call was allowed to ring audibly.</string>
    
    <string name="ok_button_text"><xliff:g>@android:string/ok</xliff:g></string>
    <string name="cancel_button_text"><xliff:g>@android:string/cancel</xliff:g></string>
    
    <string name="level_1_adjective">Low</string>
    <string name="level_2_adjective">Medium</string>
    <string name="level_3_adjective">High</string>
    <string name="level_4_adjective">Extreme</string>

	<string-array name="pref_scope_entries">
	    <item>Silent (default)</item>
	    <item>Silent or Vibrate</item>
	    <item>Vibrate</item>
	    <item>Vibrate or Sound</item>
	    <item>Sound</item>
	    <item>Any mode</item>
	</string-array>
    
</resources>
